--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,7 +1,8 @@
 @import "./font-weight";
 
-$athens-gray: #f7f7f9;
-$turquoise: #41e2ba;
-$golden-fizz: #f7e733;
-$deep-blush: #e86a92;
-$ebony-clay: #2b2d42;
+$black: #000;
+$white: #fff;
+$letter-spacing: 0.6px;
+$color-green: #06c167;
+$color-gray: rgb(238, 238, 238);
+$color-grayDarker: rgb(84, 84, 84);
