--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,52 +3,323 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Webpack Boilerplate</title>
+  <title>Uber Eat Clone</title>
 </head>
 
 <body>
+  <!-- Header -->
   <header>
-    <div class="title">
-      <h1>WEBPACK BOILERPLATE</h1>
+    <div class="container">
+      <div class="logo">
+        <h1>Ozkan <span>Eats</span></h1>
+      </div>
+      <div class="currentDetails">
+        <div class="header-option">
+          <i data-feather="map-pin"></i><span>Ankara</span>
+        </div>
+        <div class="header-option">
+          <i data-feather="clock"></i><span>Deliver Now</span>
+        </div>
+      </div>
+      <div class="searchBar">
+        <div class="header-option">
+          <i data-feather="search"></i><span>Search</span>
+        </div>
+        <div class="header-option">
+          Sign in
+        </div>
+      </div>
     </div>
   </header>
-  <main>
-    <div class="content">
-      <div class="first-card-group card-group">
-        <div class="card first">
-          <span>Sass</span>
-        </div>
-        <div class="card second">
-          <span>HTML</span>
-        </div>
-        <div class="card third">
-          <span>JavaScript</span>
-        </div>
-      </div>
-      <div class="card-group second-card-group">
-        <div class="card first">
-          <span>Sass</span>
-        </div>
-        <div class="card second">
-          <span>HTML</span>
-        </div>
-        <div class="card third">
-          <span>JavaScript</span>
-        </div>
-      </div>
-      <div class="card-group third-card-group">
-        <div class="card first">
-          <span>Sass</span>
-        </div>
-        <div class="card second">
-          <span>HTML</span>
-        </div>
-        <div class="card third">
-          <span>JavaScript</span>
-        </div>
-      </div>
+  <!-- Options -->
+  <div class="options">
+    <div class="container">
+      <button class="options-btn selected">
+        <i data-feather="shopping-bag"></i>
+        <span>Delivery</span>
+      </button>
+      <button class="options-btn">
+        <i data-feather="credit-card"></i>
+        <span>Pick-up</span>
+      </button>
     </div>
+  </div>
+
+  <!-- Listing -->
+  <div class="listings">
+    <div class="container">
+      <div class="header">
+        <div class="header-title">
+          <h2>When you're hungry now</h2>
+          <span>The fastest food to your door</span>
+        </div>
+        <div class="header-viewOptions">
+          <div class="viewAll">
+            <span>View All</span>
+          </div>
+          <div class="viewMore">
+            <span class="arrow left">
+              <i data-feather="arrow-left"></i>
+            </span>
+            <span class="arrow right darker">
+              <i data-feather="arrow-right"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="listings-grid">
+        <div class="listings-grid-element">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1562967914-01efa7e87832?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
+              alt="Listing pic">
+          </div>
+          <div class="text">
+            <div class="text-title">
+              <h3>Turkish Doner Kebab</h3>
+              <div class="info">
+                <span>₺25.99 delivery fee - 20-30 MINS ₺</span>
+              </div>
+            </div>
+            <div class="rating">
+              <span>4.2</span>
+            </div>
+          </div>
+          <div class="text-lower">
+            <span class="smallText">Classico el spaghetti and meatballs made with fresh warm meat sauce</span>
+          </div>
+        </div>
+        <div class="listings-grid-element">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1552332386-f8dd00dc2f85?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80"
+              alt="Listing pic">
+          </div>
+          <div class="text">
+            <div class="text-title">
+              <h3>Turkish Doner Kebab</h3>
+              <div class="info">
+                <span>₺25.99 delivery fee - 20-30 MINS ₺</span>
+              </div>
+            </div>
+            <div class="rating">
+              <span>4.2</span>
+            </div>
+          </div>
+          <div class="text-lower">
+            <span class="smallText">Classico el spaghetti and meatballs made with fresh warm meat sauce</span>
+          </div>
+        </div>
+        <div class="listings-grid-element">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1467453678174-768ec283a940?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1328&q=80"
+              alt="Listing pic">
+          </div>
+          <div class="text">
+            <div class="text-title">
+              <h3>Turkish Doner Kebab</h3>
+              <div class="info">
+                <span>₺25.99 delivery fee - 20-30 MINS ₺</span>
+              </div>
+            </div>
+            <div class="rating">
+              <span>4.2</span>
+            </div>
+          </div>
+          <div class="text-lower">
+            <span class="smallText">Classico el spaghetti and meatballs made with fresh warm meat sauce</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class="listings">
+    <div class="container">
+      <div class="header">
+        <div class="header-title">
+          <h2>Special offers</h2>
+          <span>The fastest food to your door</span>
+        </div>
+        <div class="header-viewOptions">
+          <div class="viewAll">
+            <span>View All</span>
+          </div>
+          <div class="viewMore">
+            <span class="arrow left">
+              <i data-feather="arrow-left"></i>
+            </span>
+            <span class="arrow right darker">
+              <i data-feather="arrow-right"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="listings-grid">
+        <div class="listings-grid-element">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1562967914-01efa7e87832?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
+              alt="Listing pic">
+          </div>
+          <div class="text">
+            <div class="text-title">
+              <h3>Turkish Doner Kebab</h3>
+              <div class="info">
+                <span>₺25.99 delivery fee - 20-30 MINS ₺</span>
+              </div>
+            </div>
+            <div class="rating">
+              <span>4.2</span>
+            </div>
+          </div>
+          <div class="text-lower">
+            <span class="smallText">Classico el spaghetti and meatballs made with fresh warm meat sauce</span>
+          </div>
+        </div>
+        <div class="listings-grid-element">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1552332386-f8dd00dc2f85?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80"
+              alt="Listing pic">
+          </div>
+          <div class="text">
+            <div class="text-title">
+              <h3>Turkish Doner Kebab</h3>
+              <div class="info">
+                <span>₺25.99 delivery fee - 20-30 MINS ₺</span>
+              </div>
+            </div>
+            <div class="rating">
+              <span>4.2</span>
+            </div>
+          </div>
+          <div class="text-lower">
+            <span class="smallText">Classico el spaghetti and meatballs made with fresh warm meat sauce</span>
+          </div>
+        </div>
+        <div class="listings-grid-element">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1467453678174-768ec283a940?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1328&q=80"
+              alt="Listing pic">
+          </div>
+          <div class="text">
+            <div class="text-title">
+              <h3>Turkish Doner Kebab</h3>
+              <div class="info">
+                <span>₺25.99 delivery fee - 20-30 MINS ₺</span>
+              </div>
+            </div>
+            <div class="rating">
+              <span>4.2</span>
+            </div>
+          </div>
+          <div class="text-lower">
+            <span class="smallText">Classico el spaghetti and meatballs made with fresh warm meat sauce</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class="listings">
+    <div class="container">
+      <div class="header">
+        <div class="header-title">
+          <h2>Popular near you</h2>
+          <span>The fastest food to your door</span>
+        </div>
+        <div class="header-viewOptions">
+          <div class="viewAll">
+            <span>View All</span>
+          </div>
+          <div class="viewMore">
+            <span class="arrow left">
+              <i data-feather="arrow-left"></i>
+            </span>
+            <span class="arrow right darker">
+              <i data-feather="arrow-right"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="listings-grid">
+        <div class="listings-grid-element">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1562967914-01efa7e87832?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
+              alt="Listing pic">
+          </div>
+          <div class="text">
+            <div class="text-title">
+              <h3>Turkish Doner Kebab</h3>
+              <div class="info">
+                <span>₺25.99 delivery fee - 20-30 MINS ₺</span>
+              </div>
+            </div>
+            <div class="rating">
+              <span>4.2</span>
+            </div>
+          </div>
+          <div class="text-lower">
+            <span class="smallText">Classico el spaghetti and meatballs made with fresh warm meat sauce</span>
+          </div>
+        </div>
+        <div class="listings-grid-element">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1552332386-f8dd00dc2f85?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80"
+              alt="Listing pic">
+          </div>
+          <div class="text">
+            <div class="text-title">
+              <h3>Turkish Doner Kebab</h3>
+              <div class="info">
+                <span>₺25.99 delivery fee - 20-30 MINS ₺</span>
+              </div>
+            </div>
+            <div class="rating">
+              <span>4.2</span>
+            </div>
+          </div>
+          <div class="text-lower">
+            <span class="smallText">Classico el spaghetti and meatballs made with fresh warm meat sauce</span>
+          </div>
+        </div>
+        <div class="listings-grid-element">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1467453678174-768ec283a940?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1328&q=80"
+              alt="Listing pic">
+          </div>
+          <div class="text">
+            <div class="text-title">
+              <h3>Turkish Doner Kebab</h3>
+              <div class="info">
+                <span>₺25.99 delivery fee - 20-30 MINS ₺</span>
+              </div>
+            </div>
+            <div class="rating">
+              <span>4.2</span>
+            </div>
+          </div>
+          <div class="text-lower">
+            <span class="smallText">Classico el spaghetti and meatballs made with fresh warm meat sauce</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <main>
+
   </main>
+  <script src="https://unpkg.com/feather-icons"></script>
+  <script>
+    feather.replace()
+  </script>
 </body>
 
 </html>
